@@ -1,5 +1,6 @@
 2008-??-?? : 1.8.1
 	nekoc : small fix in evaluation of using jump tables for switch on integers
+	regexp : use a recursion limit to prevent stack overflows in pcre
 
 2008-09-23 : 1.8.0
 	added mod_tora (neko application server)
